--- a/store/index.html
+++ b/store/index.html
@@ -41,8 +41,10 @@
                   id="profile_balance">0</strong></p>
             </li>
             <li>
-              <p class="ms-3 mt-1">Rang: <strong
-                  id="profile_rank" style="color:gray;">Spieler</strong></p>
+              <p class="ms-3 mt-1">Rang: <strong id="profile_rank" style="color:gray;">Spieler</strong></p>
+            </li>
+            <li>
+              <p class="ms-3 mt-1">Spielstunden: <strong id="profile_playtime"></strong></p>
             </li>
             <li><a class="dropdown-item" href="/logout"><i class="bi bi-door-closed"></i> Abmelden</a></li>
           </ul>
@@ -144,6 +146,8 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-autohidingnavbar/4.0.0/jquery.bootstrap-autohidingnavbar.min.js"
     integrity="sha512-c+Hev/qNHoT1qz8mOOFbF+53VBat8RlCla06HBYNZjF6Y8P4cW73n0RD5mXiQ1AB4M9huCwOqFBWJ+sGA9oDPA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/locale/de.js"></script>
   <!-- Auto hide navbar when scrolling down -->
   <script>$(".navbar.fixed-top").autoHidingNavbar();</script>
 
