--- a/store/index.html
+++ b/store/index.html
@@ -103,7 +103,7 @@
     </div>
   </div>
 
-  <div id="checkout" class="mt-5 container" style="display:none;">
+  <div id="checkout" class="mt-5 container blur-bg p-4 rounded" style="display:none;">
     <div class="text-light">
       <h1 class="display-5">Kasse</h1>
       <p>Hier kannst du deine Artikel bezahlen und erhalten.</p>
