--- a/store/index.html
+++ b/store/index.html
@@ -44,7 +44,10 @@
               <p class="ms-3 mt-1 me-1"><i class="bi bi-award"></i> Rang: <strong id="profile_rank" style="color:gray;">Spieler</strong></p>
             </li>
             <li>
-              <p class="ms-3 mt-1 me-1 text-success"><i class="bi bi-clock-history"></i> Spielzeit: <strong id="profile_playtime"></strong></p>
+              <p class="ms-3 mt-1 me-1 text-success"><i class="bi bi-clock-history"></i> Spielzeit: ca. <strong id="profile_playtime"></strong></p>
+            </li>
+            <li>
+              <p class="ms-3 mt-1 me-1 text-muted"><i class="bi bi-hourglass-split"></i> Nächste Belohnung: ungefähr <strong id="profile_playtime_gift_left"></strong></p>
             </li>
             <li><a class="dropdown-item bg-warning text-black" href="/logout"><i class="bi bi-door-closed"></i> Abmelden</a></li>
           </ul>
