--- a/store/index.html
+++ b/store/index.html
@@ -90,7 +90,7 @@
 
     <br>
 
-    <div id="articles" class="row g-4 justify-content-center"></div>
+    <div id="articles" class="row row-cols-md-3 g-2 justify-content-center"></div>
     <br>
     <p>*Die Features des niedrigeren Rangs sind auch inkludiert.</p>
 
