added functionality to trade in /pay money

--- a/store/index.html
+++ b/store/index.html
@@ -57,7 +57,7 @@
           <button class="btn btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown"
             data-bs-auto-close="outside" aria-expanded="false" id="cart_btn"><i class="bi bi-bag"></i>
             Warenkorb</button>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu scrollable">
             <li>
               <p class="text-light ms-3 mt-1">Artikel (<span class="text-success fw-bold"
                   id="cart_dd_articles_count">0</span>):
